--- a/src/templates/precompile/CartItem.hbs
+++ b/src/templates/precompile/CartItem.hbs
@@ -1,4 +1,4 @@
-{{# this}}
+{{#each this}}
     <tr>
         <td data-th="Product">
             <div class="row">
@@ -18,4 +18,4 @@
             <button class="btn btn-danger btn-sm"><i class="fa fa-trash-o"></i></button>
         </td>
     </tr>
-{{/this}}
+{{/each}}
