--- a/src/templates/precompile/ProductItem.hbs
+++ b/src/templates/precompile/ProductItem.hbs
@@ -1,4 +1,4 @@
-{{# this}}
+{{#each this}}
     <div class="col-sm-4 col-lg-4 col-md-4">
         <div class="thumbnail">
             <a href="#/product/{{id}}">
@@ -14,4 +14,4 @@
             </div>
         </div>
     </div>
-{{/this}}
+{{/each}}
