--- a/src/templates/precompile/views/ProductListView.hbs
+++ b/src/templates/precompile/views/ProductListView.hbs
@@ -1,10 +1,7 @@
 <div class="row">
     <div class="col-md-3">
         <p class="lead">Category</p>
-        <div class="list-group">
-            <a href="#" class="list-group-item">Bad Monkey</a>
-            <a href="#" class="list-group-item">Spider Monkey</a>
-            <a href="#" class="list-group-item">Rat</a>
+        <div class="list-group js-menuView">
         </div>
     </div>
     <div class="col-md-9">
