Get cart items working.

--- a/src/templates/precompile/CartItem.hbs
+++ b/src/templates/precompile/CartItem.hbs
@@ -2,18 +2,18 @@
     <tr>
         <td data-th="Product">
             <div class="row">
-                <div class="col-sm-2 hidden-xs"><img src="http://placehold.it/100x100" alt="..." class="img-responsive"/></div>
+                <div class="col-sm-2 hidden-xs"><img src="{{product.image}}" width="100" height="100px" alt="..." class="img-responsive"/></div>
                 <div class="col-sm-10">
-                    <h4 class="nomargin">Product 1</h4>
-                    <p>Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet.</p>
+                    <h4 class="nomargin">{{product.company}} - {{product.category}}</h4>
+                    <p>{{product.type}}</p>
                 </div>
             </div>
         </td>
-        <td data-th="Price">$1.99</td>
+        <td data-th="Price">${{product.price}}</td>
         <td data-th="Quantity">
-            <input type="number" class="form-control text-center" value="1">
+            <input type="number" class="form-control text-center" value="{{cart.qty}}">
         </td>
-        <td data-th="Subtotal" class="text-center">1.99</td>
+        <td data-th="Subtotal" class="text-center">${{subTotal}}</td>
         <td class="actions" data-th="">
             <button class="btn btn-danger btn-sm"><i class="fa fa-trash-o"></i></button>
         </td>
