--- a/src/templates/precompile/ProductItem.hbs
+++ b/src/templates/precompile/ProductItem.hbs
@@ -7,6 +7,7 @@
                     <h4 class="pull-right">${{price}}</h4>
                     <h4>{{category}}</h4>
                     <p>{{type}}</p>
+                    <p>by: {{company}}</p>
                 </div>
             </a>
             <div class="ratings">
