Get cart items working.

--- a/src/templates/precompile/views/CartView.hbs
+++ b/src/templates/precompile/views/CartView.hbs
@@ -18,12 +18,12 @@
             </tbody>
             <tfoot>
             <tr class="visible-xs">
-                <td class="text-center"><strong>Total <span class="js-cartTotal-total">0</span></strong></td>
+                <td class="text-center"><strong>Total $<span class="js-cartTotal-total">0</span></strong></td>
             </tr>
             <tr>
                 <td><a href="#/" class="btn btn-warning"><i class="fa fa-angle-left"></i> Continue Shopping</a></td>
                 <td colspan="2" class="hidden-xs"></td>
-                <td class="hidden-xs text-center"><strong>Total <span class="js-cartTotal-total">0</span></strong></td>
+                <td class="hidden-xs text-center"><strong>Total $<span class="js-cartTotal-total">0</span></strong></td>
                 <td><button class="btn btn-success btn-block">Checkout <i class="fa fa-angle-right"></i></button></td>
             </tr>
             </tfoot>
