--- a/src/templates/precompile/MenuItem.hbs
+++ b/src/templates/precompile/MenuItem.hbs
@@ -1,3 +1,3 @@
 {{#each this}}
-    <a href="#/products/{{categoryUrl}}" class="list-group-item">{{category}}</a>
+    <a href="#/products/{{categoryUrl}}" class="list-group-item" data-route="/products/{{categoryUrl}}">{{category}}</a>
 {{/each}}
